refactor: contract enums
